--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "nvm": "^0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
+    "three": "^0.158.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",    
+    "eject": "react-scripts eject",
     "dev": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "deploy-win": "scp -r build/* root@domokosbalazs.ro:/var/www/domokosbalazs.ro",
     "deploy-linux": "rsync -avz --delete build/ root@domokosbalazs.ro:/var/www/domokosbalazs.ro"
