--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "three": "^0.158.0",
     "web-vitals": "^2.1.4"
   },
